--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,20 @@
 			<url>http://download.java.net/maven/glassfish/</url>
 		</repository>
 	</repositories>
+	
 	<dependencies>
+	   <dependency>
+  	   	   <groupId>jstl</groupId>
+  			<artifactId>jstl</artifactId>
+  			<version>1.2</version>
+  			<scope>compile</scope>
+	    </dependency>
+	    <dependency>
+  			<groupId>taglibs</groupId>
+  			<artifactId>standard</artifactId>
+  			<version>1.1.2</version>
+  			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
